--- a/about.htm
+++ b/about.htm
@@ -39,12 +39,12 @@ Tested: April 30, 2022, Passed on Chrome and Microsoft Edge browsers.
     <!---adding navigation menu 5b.--->
         <nav id ="mobile_menu"></nav>
         <nav id = "nav_menu">
-            <ul>
-                <li id = "nav"><a href="index.htm"> Home </a></li>
-                <li id = "nav"><a href="about.htm"> About Me </a></li>
-                <li id = "nav"><a href="rates.htm"> Rates </a></li>
-                <li id = "nav"><a href="gallery.htm"> Photo Gallery </a></li>
-                <li id = "nav"><a href="contact.htm"> Contact Me </a></li>
+            <ul id = "nav">
+                <li ><a href="index.htm"> Home </a></li>
+                <li ><a href="about.htm"> About Me </a></li>
+                <li ><a href="rates.htm"> Rates </a></li>
+                <li ><a href="gallery.htm"> Photo Gallery </a></li>
+                <li ><a href="contact.htm"> Contact Me </a></li>
             </ul>
         </nav>
     
