--- a/contact.htm
+++ b/contact.htm
@@ -41,14 +41,13 @@ Tested: April 30, 2022, Passed on Chrome and Microsoft Edge browsers.
     <!---adding navigation menu 5b.--->
         <nav id ="mobile_menu"></nav>
         <nav id = "nav_menu">
-            <ul>
-                <li id = "nav"><a href="index.htm"> Home </a></li>
-                <li id = "nav"><a href="about.htm"> About Me </a></li>
-                <li id = "nav"><a href="rates.htm"> Rates </a></li>
-                <li id = "nav"><a href="gallery.htm"> Photo Gallery </a></li>
-                <li id = "nav"><a href="contact.htm"> Contact Me </a></li>
+               <ul id = "nav">
+                <li ><a href="index.htm"> Home </a></li>
+                <li ><a href="about.htm"> About Me </a></li>
+                <li ><a href="rates.htm"> Rates </a></li>
+                <li ><a href="gallery.htm"> Photo Gallery </a></li>
+                <li ><a href="contact.htm"> Contact Me </a></li>
             </ul>
-        </nav>
     
     <p class = "description"> Your future photography session is awaiting!<br> Let me remind you that we are about to make those special moments last a lifetime. <br>Please fill out the form below so I can get to know you a little more! </p>
     
