--- a/response.htm
+++ b/response.htm
@@ -2,9 +2,9 @@
 <!-- 
 *********************************************************************
 Title: KCZ Photography Response Page
-Use: To notify users that they have successfully submittted their information to me and I will respond to them shortly.
+Use: To notify users that they have successfully submitted their information to me and I will respond to them shortly.
 Author: Kaleigh Ziglar 
-School/Term: Southern Illionis University, Spring 2022
+School/Term: Southern Illinois University, Spring 2022
 Developed: April 24, 2022
 Tested: April 30, 2022, Passed on Chrome and Microsoft Edge browsers. 
 *********************************************************************
@@ -18,6 +18,6 @@ Tested: April 30, 2022, Passed on Chrome and Microsoft Edge browsers.
 </head>
 <body id = "response">
 
-    <p class = "description"> Hooray! You have successfully sumbitted your information to me! I can't wait to chat with you about your future session soon!</p>
+    <p class = "description"> Hooray! You have successfully submitted your information to me! I can't wait to chat with you about your future session soon!</p>
 </body>
 </html>
