--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 Title: KCZ Photography Home Page
 Use: To allow users to browse through KCZ Photography's online website.
 Author: Kaleigh Ziglar 
-School/Term: Southern Illionis University, Spring 2022
+School/Term: Southern Illinois University, Spring 2022
 Developed: April 17, 2022
 Tested: May 4, 2022, Passed on Chrome and Microsoft Edge browsers. 
 *********************************************************************
