--- a/rates.htm
+++ b/rates.htm
@@ -4,7 +4,7 @@
 Title: KCZ Photography Rates Page
 Use: To allow users to view pricing, hourly rates, and number of photos per session. 
 Author: Kaleigh Ziglar 
-School/Term: Southern Illionis University, Spring 2022
+School/Term: Southern Illinois University, Spring 2022
 Developed: April 17, 2022
 Tested: May 4, 2022, Passed on Chrome and Microsoft Edge browsers. 
 *********************************************************************
